2009-11-19  Mario Carrion  <mcarrion@novell.com>

	* Control.cs: New internal event: UIAIsTabStopChanged, raised when
	IsTabStopProperty changes.

	r: toshok

2009-11-18  Alan McGovern  <amcgovern@novell.com>

	* Control.cs: Move the invoking of OnApplyTemplate from
	  Control to FrameworkElement as ContentPresenter (a
	  FrameworkElement) needs to have its OnApplyTemplate method
	  invoked.

2009-11-11  Larry Ewing  <lewing@novell.com>

	* StackPanel.cs: remove the manual visibility checks, they are not
	needed.

2009-11-10  Larry Ewing  <lewing@novell.com>

	* StackPanel.cs: Rework for the new layout rules.

	r: jackson

2009-11-09  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* MediaElement.cs: Added LogReadyEvent and RequestLog method
	(3.0 API).

	r: toshok

2009-11-09  Sebastien Pouliot  <sebastien@ximian.com> 

	* Control.cs: Extract calls to event_object_do_emit_current_context
	into a new EmitCurrentContext method to reduce the [SSC] required

	r: andreia

2009-11-09  Sebastien Pouliot  <sebastien@ximian.com>

	* MediaElement.cs: Add null-check in both SetSource methods
	and nullify Source on success.

	r: rolf

2009-11-06  Chris Toshok  <toshok@ximian.com>

	* ContentPresenter.cs: InvokeLoaded no longer takes event args
	since it doesn't emit the event.

2009-11-05  Alan McGovern  <amcgovern@novell.com>

	* Control.cs:
	* ItemsControl.cs:
	* ItemsPresenter.cs:
	* ContentControl.cs:
	* ContentPresenter.cs: Templates must be expanded as part of
	  the first step of Measure. To support this, remove the old
	  ApplyTemplateHook managed path and refactor the
	  GetTemplateRoot managed path into a more generic
	  GetDefaultTemplate method. Whenever native code needs to get
	  a default template from managed, this is invoked to retrieve
	  it. ApplyTemplate and OnApplyTemplate have been moved to
	  FrameworkElement itself to simplify the code required to
	  support templateable framework elements (ItemsPresenter for
	  example). r: toshok
