@@ -31,10 +31,21 @@ using Mono;
 namespace System.Windows.Controls {
 	public partial class StackPanel : Panel {
 		public static readonly DependencyProperty OrientationProperty = 
-		DependencyProperty.RegisterCore ("Orientation", typeof (Orientation), typeof (StackPanel), null);
+			DependencyProperty.RegisterCore ("Orientation", typeof (Orientation), typeof (StackPanel), new PropertyMetadata (new PropertyChangedCallback (OnStackPanelOrientationChanged)));
 		public Orientation Orientation {
 			get { return (Orientation) GetValue (OrientationProperty); }
 			set { SetValue(OrientationProperty, value); }
+		}
+
+		private static void OnStackPanelOrientationChanged(DependencyObject d, DependencyPropertyChangedEventArgs e)
+		{
+			StackPanel sp = d as StackPanel;
+
+			if (sp == null)
+				return;
+
+			sp.InvalidateMeasure ();
+			sp.InvalidateArrange ();
 		}
 
 		protected override sealed Size MeasureOverride (Size availableSize) {
